Lots of edits, created a global css file and split page specifc css to other files. began work on the seperate recipe pages. fixed a few spacing issues on the index page.

--- a/index.css
+++ b/index.css
@@ -1,30 +1,4 @@
-* {
-    margin:0;
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
 
-.navbar {
-    display:flex;
-    justify-content:left;
-    padding: 1rem 2rem;
-    border-bottom: 2px solid rgb(183, 183, 183);
-    align-items: center;
-}
-.navbrand {
-    display:flex;
-    gap:1em;
-    text-decoration: none;
-    color:black;
-    align-items: center;
-    letter-spacing: .05rem;
-}
-.navbrand:hover {
-    opacity:75%;
-}
-.nav-link:hover {
-    color:gray;
-    cursor:pointer;
-}
 .recipeoftheday {
     display: flex;
     flex-direction: column;
@@ -53,11 +27,6 @@ h4 {
     opacity:70%;
     cursor: pointer;
 }
-.section-title {
-    font-size:2rem;
-    letter-spacing: .05rem;
-    text-align: center;
-}
 .recipes {
   display: flex;
   flex-direction: column;
@@ -73,7 +42,6 @@ h4 {
 }
 .card-img {
     width:100%;
-    height:18rem;
 }
 .recipes-grid {
     display: grid;
